MarketBasketAnalysis.Server.App/envoy/envoy.template.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 134217728 # 128 MB
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 100
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
      - name: "envoy.resource_monitors.fixed_heap"
        threshold:
          value: 0.95
  - name: "envoy.overload_actions.stop_accepting_requests"
    triggers:
      - name: "envoy.resource_monitors.fixed_heap"
        threshold:
          value: 0.98

static_resources:
  listeners:
    - name: market_basket_analysis_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      listener_filters:
        - name: "envoy.filters.listener.tls_inspector"
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      per_connection_buffer_limit_bytes: 32768 # 32 KB
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              use_remote_address: true
              normalize_path: true
              merge_slashes: true
              path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
              common_http_protocol_options:
                idle_timeout: 300s
                headers_with_underscores_action: REJECT_REQUEST
              stream_idle_timeout: 300s
              request_timeout: 300s
              route_config:
                virtual_hosts:
                  - name: default
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: market_basket_analysis_cluster
                          idle_timeout: 300s
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                    typed_per_filter_config:
                      envoy.filters.http.cors:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                        allow_origin_string_match:
                          - exact: $ALLOWED_ORIGIN
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
              internal_address_config:
                cidr_ranges:
                  - address_prefix: "172.17.0.0"
                    prefix_len: 16
                  - address_prefix: "127.0.0.1"
                    prefix_len: 32
              http_filters:
                - name: envoy.filters.http.jwt_authn
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      jwt_provider:
                        issuer: "$JWT_ISSUER"
                        audiences: [ JWT_AUDIENCE ]
                        remote_jwks:
                          http_uri:
                            uri: "$JWKS_URI"
                            cluster: jwks_cluster
                            timeout: 5s
                          cache_duration: 3600s
                          async_fetch: {}
                          retry_policy:
                            num_retries: 5
                    rules:
                      - match:
                          prefix: "/"
                        requires:
                          provider_name: "jwt_provider"
                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limit
                    token_bucket:
                      max_tokens: 100
                      tokens_per_fill: 100
                      fill_interval: 1s
                    filter_enabled:
                      runtime_key: local_rate_limit_enabled
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    filter_enforced:
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    local_rate_limit_per_downstream_connection: true
                    rate_limited_as_resource_exhausted: true
                - name: envoy.filters.http.buffer
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                    max_request_bytes: 4194304 # 4 MB
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/envoy/fullchain.pem"
                    private_key:
                      filename: "/etc/envoy/privkey.pem"
                alpn_protocols: ["http/1.1"]
  clusters:
    - name: market_basket_analysis_cluster
      per_connection_buffer_limit_bytes: 32768 # 32 KB
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: market_basket_analysis_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: api
                    port_value: 8080
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              initial_stream_window_size: 65536 # 64 KB
              initial_connection_window_size: 1048576 # 1 MB
    - name: jwks_cluster
      connect_timeout: 5s
      type: strict_dns
      dns_lookup_family: V4_ONLY
      lb_policy: round_robin
      load_assignment:
        cluster_name: jwks_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: $JWKS_HOST
                    port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext

layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy.reloadable_features.explicit_internal_address_config: true
